// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render <App /> component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <MuiThemeProvider
        muiTheme={
          Object {
            "appBar": Object {
              "color": "#0081ff",
              "height": 64,
              "padding": 24,
              "textColor": "#ffffff",
              "titleFontWeight": 400,
            },
            "avatar": Object {
              "backgroundColor": "rgb(188, 188, 188)",
              "color": "#ffffff",
            },
            "badge": Object {
              "color": "#ffffff",
              "fontWeight": 500,
              "primaryColor": "#0081ff",
              "primaryTextColor": "#ffffff",
              "secondaryColor": "#ff4081",
              "secondaryTextColor": "#ffffff",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "baseTheme": Object {
              "fontFamily": "Roboto, sans-serif",
              "palette": Object {
                "accent1Color": "#ff4081",
                "accent2Color": "#f5f5f5",
                "accent3Color": "#9e9e9e",
                "alternateTextColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "canvasColor": "#ffffff",
                "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                "disabledColor": "rgba(0, 0, 0, 0.3)",
                "pickerHeaderColor": "#0081ff",
                "primary1Color": "#0081ff",
                "primary2Color": "#0081ff",
                "primary3Color": "#bdbdbd",
                "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
                "shadowColor": "rgba(0, 0, 0, 1)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "spacing": Object {
                "desktopDrawerMenuItemHeight": 48,
                "desktopDropDownMenuFontSize": 15,
                "desktopDropDownMenuItemHeight": 32,
                "desktopGutter": 24,
                "desktopGutterLess": 16,
                "desktopGutterMini": 8,
                "desktopGutterMore": 32,
                "desktopKeylineIncrement": 64,
                "desktopSubheaderHeight": 48,
                "desktopToolbarHeight": 56,
                "iconSize": 24,
              },
            },
            "borderRadius": 2,
            "bottomNavigation": Object {
              "backgroundColor": "#ffffff",
              "height": 56,
              "selectedColor": "#0081ff",
              "selectedFontSize": 14,
              "unselectedColor": "rgba(0, 0, 0, 0.54)",
              "unselectedFontSize": 12,
            },
            "button": Object {
              "height": 36,
              "iconButtonSize": 48,
              "minWidth": 88,
            },
            "card": Object {
              "fontWeight": 500,
              "subtitleColor": "rgba(0, 0, 0, 0.54)",
              "titleColor": "rgba(0, 0, 0, 0.87)",
            },
            "cardMedia": Object {
              "color": "rgba(255, 255, 255, 0.87)",
              "overlayContentBackground": "rgba(0, 0, 0, 0.54)",
              "subtitleColor": "rgba(255, 255, 255, 0.54)",
              "titleColor": "rgba(255, 255, 255, 0.87)",
            },
            "cardText": Object {
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "checkbox": Object {
              "boxColor": "rgba(0, 0, 0, 0.87)",
              "checkedColor": "#0081ff",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "labelColor": "rgba(0, 0, 0, 0.87)",
              "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
              "requiredColor": "#0081ff",
            },
            "chip": Object {
              "backgroundColor": "rgb(224, 224, 224)",
              "deleteIconColor": "rgba(0, 0, 0, 0.26)",
              "fontSize": 14,
              "fontWeight": 400,
              "shadow": "0 1px 6px rgba(0, 0, 0, 0.12),
        0 1px 4px rgba(0, 0, 0, 0.12)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "datePicker": Object {
              "calendarTextColor": "rgba(0, 0, 0, 0.87)",
              "calendarYearBackgroundColor": "#ffffff",
              "color": "#0081ff",
              "headerColor": "#0081ff",
              "selectColor": "#0081ff",
              "selectTextColor": "#ffffff",
              "textColor": "#ffffff",
            },
            "dialog": Object {
              "bodyColor": "rgba(0, 0, 0, 0.6)",
              "bodyFontSize": 16,
              "titleFontSize": 22,
            },
            "drawer": Object {
              "color": "#ffffff",
              "width": 256,
            },
            "dropDownMenu": Object {
              "accentColor": "#e0e0e0",
            },
            "enhancedButton": Object {
              "tapHighlightColor": "rgba(0, 0, 0, 0)",
            },
            "flatButton": Object {
              "buttonFilterColor": "#999999",
              "color": "rgba(0, 0, 0, 0)",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "fontSize": 14,
              "fontWeight": 500,
              "primaryTextColor": "#0081ff",
              "secondaryTextColor": "#ff4081",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "floatingActionButton": Object {
              "buttonSize": 56,
              "color": "#0081ff",
              "disabledColor": "rgb(224, 224, 224)",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "iconColor": "#ffffff",
              "miniSize": 40,
              "secondaryColor": "#ff4081",
              "secondaryIconColor": "#ffffff",
            },
            "fontFamily": "Roboto, sans-serif",
            "gridTile": Object {
              "textColor": "#ffffff",
            },
            "icon": Object {
              "backgroundColor": "#0081ff",
              "color": "#ffffff",
            },
            "inkBar": Object {
              "backgroundColor": "#ff4081",
            },
            "isRtl": false,
            "listItem": Object {
              "leftIconColor": "#757575",
              "nestedLevelDepth": 18,
              "rightIconColor": "#757575",
              "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
            },
            "menu": Object {
              "backgroundColor": "#ffffff",
              "containerBackgroundColor": "#ffffff",
            },
            "menuItem": Object {
              "dataHeight": 32,
              "height": 48,
              "hoverColor": "rgba(0, 0, 0, 0.1)",
              "padding": 24,
              "rightIconDesktopFill": "#757575",
              "selectedTextColor": "#ff4081",
            },
            "menuSubheader": Object {
              "borderColor": "#e0e0e0",
              "padding": 24,
              "textColor": "#0081ff",
            },
            "overlay": Object {
              "backgroundColor": "rgba(0, 0, 0, 0.54)",
            },
            "palette": Object {
              "accent1Color": "#ff4081",
              "accent2Color": "#f5f5f5",
              "accent3Color": "#9e9e9e",
              "alternateTextColor": "#ffffff",
              "borderColor": "#e0e0e0",
              "canvasColor": "#ffffff",
              "clockCircleColor": "rgba(0, 0, 0, 0.07)",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "pickerHeaderColor": "#0081ff",
              "primary1Color": "#0081ff",
              "primary2Color": "#0081ff",
              "primary3Color": "#bdbdbd",
              "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
              "shadowColor": "rgba(0, 0, 0, 1)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "paper": Object {
              "backgroundColor": "#ffffff",
              "color": "rgba(0, 0, 0, 0.87)",
              "zDepthShadows": Array [
                "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
                "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
                "0 10px 30px rgba(0, 0, 0, 0.19),
         0 6px 10px rgba(0, 0, 0, 0.23)",
                "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
                "0 19px 60px rgba(0, 0, 0, 0.3),
         0 15px 20px rgba(0, 0, 0, 0.22)",
              ],
            },
            "prepareStyles": [Function],
            "radioButton": Object {
              "backgroundColor": "#ffffff",
              "borderColor": "rgba(0, 0, 0, 0.87)",
              "checkedColor": "#0081ff",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "labelColor": "rgba(0, 0, 0, 0.87)",
              "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
              "requiredColor": "#0081ff",
              "size": 24,
            },
            "raisedButton": Object {
              "color": "#ffffff",
              "disabledColor": "rgb(229, 229, 229)",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "fontSize": 14,
              "fontWeight": 500,
              "primaryColor": "#0081ff",
              "primaryTextColor": "#ffffff",
              "secondaryColor": "#ff4081",
              "secondaryTextColor": "#ffffff",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "rawTheme": Object {
              "fontFamily": "Roboto, sans-serif",
              "palette": Object {
                "accent1Color": "#ff4081",
                "accent2Color": "#f5f5f5",
                "accent3Color": "#9e9e9e",
                "alternateTextColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "canvasColor": "#ffffff",
                "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                "disabledColor": "rgba(0, 0, 0, 0.3)",
                "pickerHeaderColor": "#0081ff",
                "primary1Color": "#0081ff",
                "primary2Color": "#0081ff",
                "primary3Color": "#bdbdbd",
                "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
                "shadowColor": "rgba(0, 0, 0, 1)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "spacing": Object {
                "desktopDrawerMenuItemHeight": 48,
                "desktopDropDownMenuFontSize": 15,
                "desktopDropDownMenuItemHeight": 32,
                "desktopGutter": 24,
                "desktopGutterLess": 16,
                "desktopGutterMini": 8,
                "desktopGutterMore": 32,
                "desktopKeylineIncrement": 64,
                "desktopSubheaderHeight": 48,
                "desktopToolbarHeight": 56,
                "iconSize": 24,
              },
            },
            "refreshIndicator": Object {
              "loadingStrokeColor": "#0081ff",
              "strokeColor": "#e0e0e0",
            },
            "ripple": Object {
              "color": "rgba(0, 0, 0, 0.87)",
            },
            "slider": Object {
              "handleColorZero": "#bdbdbd",
              "handleFillColor": "#ffffff",
              "handleSize": 12,
              "handleSizeActive": 18,
              "handleSizeDisabled": 8,
              "rippleColor": "#0081ff",
              "selectionColor": "#0081ff",
              "trackColor": "#bdbdbd",
              "trackColorSelected": "#9e9e9e",
              "trackSize": 2,
            },
            "snackbar": Object {
              "actionColor": "#ff4081",
              "backgroundColor": "rgba(0, 0, 0, 0.87)",
              "textColor": "#ffffff",
            },
            "spacing": Object {
              "desktopDrawerMenuItemHeight": 48,
              "desktopDropDownMenuFontSize": 15,
              "desktopDropDownMenuItemHeight": 32,
              "desktopGutter": 24,
              "desktopGutterLess": 16,
              "desktopGutterMini": 8,
              "desktopGutterMore": 32,
              "desktopKeylineIncrement": 64,
              "desktopSubheaderHeight": 48,
              "desktopToolbarHeight": 56,
              "iconSize": 24,
            },
            "stepper": Object {
              "backgroundColor": "transparent",
              "connectorLineColor": "#bdbdbd",
              "disabledTextColor": "rgba(0, 0, 0, 0.26)",
              "hoverBackgroundColor": "rgba(0, 0, 0, 0.06)",
              "hoveredIconColor": "#616161",
              "iconColor": "#0081ff",
              "inactiveIconColor": "#9e9e9e",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "subheader": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontWeight": 500,
            },
            "svgIcon": Object {
              "color": "rgba(0, 0, 0, 0.87)",
            },
            "table": Object {
              "backgroundColor": "#ffffff",
            },
            "tableFooter": Object {
              "borderColor": "#e0e0e0",
              "textColor": "#9e9e9e",
            },
            "tableHeader": Object {
              "borderColor": "#e0e0e0",
            },
            "tableHeaderColumn": Object {
              "height": 56,
              "spacing": 24,
              "textColor": "#9e9e9e",
            },
            "tableRow": Object {
              "borderColor": "#e0e0e0",
              "height": 48,
              "hoverColor": "#f5f5f5",
              "selectedColor": "#e0e0e0",
              "stripeColor": "rgba(127, 192, 255, 0.4)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "tableRowColumn": Object {
              "height": 48,
              "spacing": 24,
            },
            "tabs": Object {
              "backgroundColor": "#0081ff",
              "selectedTextColor": "#ffffff",
              "textColor": "rgba(255, 255, 255, 0.7)",
            },
            "textField": Object {
              "backgroundColor": "transparent",
              "borderColor": "#e0e0e0",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "errorColor": "#f44336",
              "floatingLabelColor": "rgba(0, 0, 0, 0.3)",
              "focusColor": "#0081ff",
              "hintColor": "rgba(0, 0, 0, 0.3)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "timePicker": Object {
              "accentColor": "#0081ff",
              "clockCircleColor": "rgba(0, 0, 0, 0.07)",
              "clockColor": "rgba(0, 0, 0, 0.87)",
              "color": "#ffffff",
              "headerColor": "#0081ff",
              "selectColor": "#0081ff",
              "selectTextColor": "#ffffff",
              "textColor": "#ffffff",
            },
            "toggle": Object {
              "labelColor": "rgba(0, 0, 0, 0.87)",
              "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
              "thumbDisabledColor": "#e0e0e0",
              "thumbOffColor": "#f5f5f5",
              "thumbOnColor": "#0081ff",
              "thumbRequiredColor": "#0081ff",
              "trackDisabledColor": "#bdbdbd",
              "trackOffColor": "#bdbdbd",
              "trackOnColor": "rgba(0, 129, 255, 0.5)",
              "trackRequiredColor": "rgba(0, 129, 255, 0.5)",
            },
            "toolbar": Object {
              "backgroundColor": "rgb(232, 232, 232)",
              "color": "rgba(0, 0, 0, 0.54)",
              "height": 56,
              "hoverColor": "rgba(0, 0, 0, 0.87)",
              "iconColor": "rgba(0, 0, 0, 0.4)",
              "menuHoverColor": "rgba(0, 0, 0, 0.1)",
              "separatorColor": "rgba(0, 0, 0, 0.175)",
              "titleFontSize": 20,
            },
            "tooltip": Object {
              "color": "#ffffff",
              "opacity": 0.9,
              "rippleBackgroundColor": "#616161",
            },
            "zIndex": Object {
              "appBar": 1100,
              "dialog": 1500,
              "dialogOverlay": 1400,
              "drawer": 1300,
              "drawerOverlay": 1200,
              "layer": 2000,
              "menu": 1000,
              "popover": 2100,
              "snackbar": 2900,
              "tooltip": 3000,
            },
          }
        }
      >
        <Apollo(FormContainer) />
      </MuiThemeProvider>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Apollo(FormContainer) />,
        "muiTheme": Object {
          "appBar": Object {
            "color": "#0081ff",
            "height": 64,
            "padding": 24,
            "textColor": "#ffffff",
            "titleFontWeight": 400,
          },
          "avatar": Object {
            "backgroundColor": "rgb(188, 188, 188)",
            "color": "#ffffff",
          },
          "badge": Object {
            "color": "#ffffff",
            "fontWeight": 500,
            "primaryColor": "#0081ff",
            "primaryTextColor": "#ffffff",
            "secondaryColor": "#ff4081",
            "secondaryTextColor": "#ffffff",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "baseTheme": Object {
            "fontFamily": "Roboto, sans-serif",
            "palette": Object {
              "accent1Color": "#ff4081",
              "accent2Color": "#f5f5f5",
              "accent3Color": "#9e9e9e",
              "alternateTextColor": "#ffffff",
              "borderColor": "#e0e0e0",
              "canvasColor": "#ffffff",
              "clockCircleColor": "rgba(0, 0, 0, 0.07)",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "pickerHeaderColor": "#0081ff",
              "primary1Color": "#0081ff",
              "primary2Color": "#0081ff",
              "primary3Color": "#bdbdbd",
              "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
              "shadowColor": "rgba(0, 0, 0, 1)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "spacing": Object {
              "desktopDrawerMenuItemHeight": 48,
              "desktopDropDownMenuFontSize": 15,
              "desktopDropDownMenuItemHeight": 32,
              "desktopGutter": 24,
              "desktopGutterLess": 16,
              "desktopGutterMini": 8,
              "desktopGutterMore": 32,
              "desktopKeylineIncrement": 64,
              "desktopSubheaderHeight": 48,
              "desktopToolbarHeight": 56,
              "iconSize": 24,
            },
          },
          "borderRadius": 2,
          "bottomNavigation": Object {
            "backgroundColor": "#ffffff",
            "height": 56,
            "selectedColor": "#0081ff",
            "selectedFontSize": 14,
            "unselectedColor": "rgba(0, 0, 0, 0.54)",
            "unselectedFontSize": 12,
          },
          "button": Object {
            "height": 36,
            "iconButtonSize": 48,
            "minWidth": 88,
          },
          "card": Object {
            "fontWeight": 500,
            "subtitleColor": "rgba(0, 0, 0, 0.54)",
            "titleColor": "rgba(0, 0, 0, 0.87)",
          },
          "cardMedia": Object {
            "color": "rgba(255, 255, 255, 0.87)",
            "overlayContentBackground": "rgba(0, 0, 0, 0.54)",
            "subtitleColor": "rgba(255, 255, 255, 0.54)",
            "titleColor": "rgba(255, 255, 255, 0.87)",
          },
          "cardText": Object {
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "checkbox": Object {
            "boxColor": "rgba(0, 0, 0, 0.87)",
            "checkedColor": "#0081ff",
            "disabledColor": "rgba(0, 0, 0, 0.3)",
            "labelColor": "rgba(0, 0, 0, 0.87)",
            "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
            "requiredColor": "#0081ff",
          },
          "chip": Object {
            "backgroundColor": "rgb(224, 224, 224)",
            "deleteIconColor": "rgba(0, 0, 0, 0.26)",
            "fontSize": 14,
            "fontWeight": 400,
            "shadow": "0 1px 6px rgba(0, 0, 0, 0.12),
        0 1px 4px rgba(0, 0, 0, 0.12)",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "datePicker": Object {
            "calendarTextColor": "rgba(0, 0, 0, 0.87)",
            "calendarYearBackgroundColor": "#ffffff",
            "color": "#0081ff",
            "headerColor": "#0081ff",
            "selectColor": "#0081ff",
            "selectTextColor": "#ffffff",
            "textColor": "#ffffff",
          },
          "dialog": Object {
            "bodyColor": "rgba(0, 0, 0, 0.6)",
            "bodyFontSize": 16,
            "titleFontSize": 22,
          },
          "drawer": Object {
            "color": "#ffffff",
            "width": 256,
          },
          "dropDownMenu": Object {
            "accentColor": "#e0e0e0",
          },
          "enhancedButton": Object {
            "tapHighlightColor": "rgba(0, 0, 0, 0)",
          },
          "flatButton": Object {
            "buttonFilterColor": "#999999",
            "color": "rgba(0, 0, 0, 0)",
            "disabledTextColor": "rgba(0, 0, 0, 0.3)",
            "fontSize": 14,
            "fontWeight": 500,
            "primaryTextColor": "#0081ff",
            "secondaryTextColor": "#ff4081",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "floatingActionButton": Object {
            "buttonSize": 56,
            "color": "#0081ff",
            "disabledColor": "rgb(224, 224, 224)",
            "disabledTextColor": "rgba(0, 0, 0, 0.3)",
            "iconColor": "#ffffff",
            "miniSize": 40,
            "secondaryColor": "#ff4081",
            "secondaryIconColor": "#ffffff",
          },
          "fontFamily": "Roboto, sans-serif",
          "gridTile": Object {
            "textColor": "#ffffff",
          },
          "icon": Object {
            "backgroundColor": "#0081ff",
            "color": "#ffffff",
          },
          "inkBar": Object {
            "backgroundColor": "#ff4081",
          },
          "isRtl": false,
          "listItem": Object {
            "leftIconColor": "#757575",
            "nestedLevelDepth": 18,
            "rightIconColor": "#757575",
            "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
          },
          "menu": Object {
            "backgroundColor": "#ffffff",
            "containerBackgroundColor": "#ffffff",
          },
          "menuItem": Object {
            "dataHeight": 32,
            "height": 48,
            "hoverColor": "rgba(0, 0, 0, 0.1)",
            "padding": 24,
            "rightIconDesktopFill": "#757575",
            "selectedTextColor": "#ff4081",
          },
          "menuSubheader": Object {
            "borderColor": "#e0e0e0",
            "padding": 24,
            "textColor": "#0081ff",
          },
          "overlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.54)",
          },
          "palette": Object {
            "accent1Color": "#ff4081",
            "accent2Color": "#f5f5f5",
            "accent3Color": "#9e9e9e",
            "alternateTextColor": "#ffffff",
            "borderColor": "#e0e0e0",
            "canvasColor": "#ffffff",
            "clockCircleColor": "rgba(0, 0, 0, 0.07)",
            "disabledColor": "rgba(0, 0, 0, 0.3)",
            "pickerHeaderColor": "#0081ff",
            "primary1Color": "#0081ff",
            "primary2Color": "#0081ff",
            "primary3Color": "#bdbdbd",
            "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
            "shadowColor": "rgba(0, 0, 0, 1)",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "paper": Object {
            "backgroundColor": "#ffffff",
            "color": "rgba(0, 0, 0, 0.87)",
            "zDepthShadows": Array [
              "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
              "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
              "0 10px 30px rgba(0, 0, 0, 0.19),
         0 6px 10px rgba(0, 0, 0, 0.23)",
              "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
              "0 19px 60px rgba(0, 0, 0, 0.3),
         0 15px 20px rgba(0, 0, 0, 0.22)",
            ],
          },
          "prepareStyles": [Function],
          "radioButton": Object {
            "backgroundColor": "#ffffff",
            "borderColor": "rgba(0, 0, 0, 0.87)",
            "checkedColor": "#0081ff",
            "disabledColor": "rgba(0, 0, 0, 0.3)",
            "labelColor": "rgba(0, 0, 0, 0.87)",
            "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
            "requiredColor": "#0081ff",
            "size": 24,
          },
          "raisedButton": Object {
            "color": "#ffffff",
            "disabledColor": "rgb(229, 229, 229)",
            "disabledTextColor": "rgba(0, 0, 0, 0.3)",
            "fontSize": 14,
            "fontWeight": 500,
            "primaryColor": "#0081ff",
            "primaryTextColor": "#ffffff",
            "secondaryColor": "#ff4081",
            "secondaryTextColor": "#ffffff",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "rawTheme": Object {
            "fontFamily": "Roboto, sans-serif",
            "palette": Object {
              "accent1Color": "#ff4081",
              "accent2Color": "#f5f5f5",
              "accent3Color": "#9e9e9e",
              "alternateTextColor": "#ffffff",
              "borderColor": "#e0e0e0",
              "canvasColor": "#ffffff",
              "clockCircleColor": "rgba(0, 0, 0, 0.07)",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "pickerHeaderColor": "#0081ff",
              "primary1Color": "#0081ff",
              "primary2Color": "#0081ff",
              "primary3Color": "#bdbdbd",
              "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
              "shadowColor": "rgba(0, 0, 0, 1)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "spacing": Object {
              "desktopDrawerMenuItemHeight": 48,
              "desktopDropDownMenuFontSize": 15,
              "desktopDropDownMenuItemHeight": 32,
              "desktopGutter": 24,
              "desktopGutterLess": 16,
              "desktopGutterMini": 8,
              "desktopGutterMore": 32,
              "desktopKeylineIncrement": 64,
              "desktopSubheaderHeight": 48,
              "desktopToolbarHeight": 56,
              "iconSize": 24,
            },
          },
          "refreshIndicator": Object {
            "loadingStrokeColor": "#0081ff",
            "strokeColor": "#e0e0e0",
          },
          "ripple": Object {
            "color": "rgba(0, 0, 0, 0.87)",
          },
          "slider": Object {
            "handleColorZero": "#bdbdbd",
            "handleFillColor": "#ffffff",
            "handleSize": 12,
            "handleSizeActive": 18,
            "handleSizeDisabled": 8,
            "rippleColor": "#0081ff",
            "selectionColor": "#0081ff",
            "trackColor": "#bdbdbd",
            "trackColorSelected": "#9e9e9e",
            "trackSize": 2,
          },
          "snackbar": Object {
            "actionColor": "#ff4081",
            "backgroundColor": "rgba(0, 0, 0, 0.87)",
            "textColor": "#ffffff",
          },
          "spacing": Object {
            "desktopDrawerMenuItemHeight": 48,
            "desktopDropDownMenuFontSize": 15,
            "desktopDropDownMenuItemHeight": 32,
            "desktopGutter": 24,
            "desktopGutterLess": 16,
            "desktopGutterMini": 8,
            "desktopGutterMore": 32,
            "desktopKeylineIncrement": 64,
            "desktopSubheaderHeight": 48,
            "desktopToolbarHeight": 56,
            "iconSize": 24,
          },
          "stepper": Object {
            "backgroundColor": "transparent",
            "connectorLineColor": "#bdbdbd",
            "disabledTextColor": "rgba(0, 0, 0, 0.26)",
            "hoverBackgroundColor": "rgba(0, 0, 0, 0.06)",
            "hoveredIconColor": "#616161",
            "iconColor": "#0081ff",
            "inactiveIconColor": "#9e9e9e",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "subheader": Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "fontWeight": 500,
          },
          "svgIcon": Object {
            "color": "rgba(0, 0, 0, 0.87)",
          },
          "table": Object {
            "backgroundColor": "#ffffff",
          },
          "tableFooter": Object {
            "borderColor": "#e0e0e0",
            "textColor": "#9e9e9e",
          },
          "tableHeader": Object {
            "borderColor": "#e0e0e0",
          },
          "tableHeaderColumn": Object {
            "height": 56,
            "spacing": 24,
            "textColor": "#9e9e9e",
          },
          "tableRow": Object {
            "borderColor": "#e0e0e0",
            "height": 48,
            "hoverColor": "#f5f5f5",
            "selectedColor": "#e0e0e0",
            "stripeColor": "rgba(127, 192, 255, 0.4)",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "tableRowColumn": Object {
            "height": 48,
            "spacing": 24,
          },
          "tabs": Object {
            "backgroundColor": "#0081ff",
            "selectedTextColor": "#ffffff",
            "textColor": "rgba(255, 255, 255, 0.7)",
          },
          "textField": Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "disabledTextColor": "rgba(0, 0, 0, 0.3)",
            "errorColor": "#f44336",
            "floatingLabelColor": "rgba(0, 0, 0, 0.3)",
            "focusColor": "#0081ff",
            "hintColor": "rgba(0, 0, 0, 0.3)",
            "textColor": "rgba(0, 0, 0, 0.87)",
          },
          "timePicker": Object {
            "accentColor": "#0081ff",
            "clockCircleColor": "rgba(0, 0, 0, 0.07)",
            "clockColor": "rgba(0, 0, 0, 0.87)",
            "color": "#ffffff",
            "headerColor": "#0081ff",
            "selectColor": "#0081ff",
            "selectTextColor": "#ffffff",
            "textColor": "#ffffff",
          },
          "toggle": Object {
            "labelColor": "rgba(0, 0, 0, 0.87)",
            "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
            "thumbDisabledColor": "#e0e0e0",
            "thumbOffColor": "#f5f5f5",
            "thumbOnColor": "#0081ff",
            "thumbRequiredColor": "#0081ff",
            "trackDisabledColor": "#bdbdbd",
            "trackOffColor": "#bdbdbd",
            "trackOnColor": "rgba(0, 129, 255, 0.5)",
            "trackRequiredColor": "rgba(0, 129, 255, 0.5)",
          },
          "toolbar": Object {
            "backgroundColor": "rgb(232, 232, 232)",
            "color": "rgba(0, 0, 0, 0.54)",
            "height": 56,
            "hoverColor": "rgba(0, 0, 0, 0.87)",
            "iconColor": "rgba(0, 0, 0, 0.4)",
            "menuHoverColor": "rgba(0, 0, 0, 0.1)",
            "separatorColor": "rgba(0, 0, 0, 0.175)",
            "titleFontSize": 20,
          },
          "tooltip": Object {
            "color": "#ffffff",
            "opacity": 0.9,
            "rippleBackgroundColor": "#616161",
          },
          "zIndex": Object {
            "appBar": 1100,
            "dialog": 1500,
            "dialogOverlay": 1400,
            "drawer": 1300,
            "drawerOverlay": 1200,
            "layer": 2000,
            "menu": 1000,
            "popover": 2100,
            "snackbar": 2900,
            "tooltip": 3000,
          },
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bZQynM",
        "isStatic": true,
        "rules": Array [
          "
  text-align: center;
  background-color: #e6ecf5;
  height: 100vh;
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bZQynM",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <MuiThemeProvider
          muiTheme={
            Object {
              "appBar": Object {
                "color": "#0081ff",
                "height": 64,
                "padding": 24,
                "textColor": "#ffffff",
                "titleFontWeight": 400,
              },
              "avatar": Object {
                "backgroundColor": "rgb(188, 188, 188)",
                "color": "#ffffff",
              },
              "badge": Object {
                "color": "#ffffff",
                "fontWeight": 500,
                "primaryColor": "#0081ff",
                "primaryTextColor": "#ffffff",
                "secondaryColor": "#ff4081",
                "secondaryTextColor": "#ffffff",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "baseTheme": Object {
                "fontFamily": "Roboto, sans-serif",
                "palette": Object {
                  "accent1Color": "#ff4081",
                  "accent2Color": "#f5f5f5",
                  "accent3Color": "#9e9e9e",
                  "alternateTextColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "canvasColor": "#ffffff",
                  "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                  "disabledColor": "rgba(0, 0, 0, 0.3)",
                  "pickerHeaderColor": "#0081ff",
                  "primary1Color": "#0081ff",
                  "primary2Color": "#0081ff",
                  "primary3Color": "#bdbdbd",
                  "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "textColor": "rgba(0, 0, 0, 0.87)",
                },
                "spacing": Object {
                  "desktopDrawerMenuItemHeight": 48,
                  "desktopDropDownMenuFontSize": 15,
                  "desktopDropDownMenuItemHeight": 32,
                  "desktopGutter": 24,
                  "desktopGutterLess": 16,
                  "desktopGutterMini": 8,
                  "desktopGutterMore": 32,
                  "desktopKeylineIncrement": 64,
                  "desktopSubheaderHeight": 48,
                  "desktopToolbarHeight": 56,
                  "iconSize": 24,
                },
              },
              "borderRadius": 2,
              "bottomNavigation": Object {
                "backgroundColor": "#ffffff",
                "height": 56,
                "selectedColor": "#0081ff",
                "selectedFontSize": 14,
                "unselectedColor": "rgba(0, 0, 0, 0.54)",
                "unselectedFontSize": 12,
              },
              "button": Object {
                "height": 36,
                "iconButtonSize": 48,
                "minWidth": 88,
              },
              "card": Object {
                "fontWeight": 500,
                "subtitleColor": "rgba(0, 0, 0, 0.54)",
                "titleColor": "rgba(0, 0, 0, 0.87)",
              },
              "cardMedia": Object {
                "color": "rgba(255, 255, 255, 0.87)",
                "overlayContentBackground": "rgba(0, 0, 0, 0.54)",
                "subtitleColor": "rgba(255, 255, 255, 0.54)",
                "titleColor": "rgba(255, 255, 255, 0.87)",
              },
              "cardText": Object {
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "checkbox": Object {
                "boxColor": "rgba(0, 0, 0, 0.87)",
                "checkedColor": "#0081ff",
                "disabledColor": "rgba(0, 0, 0, 0.3)",
                "labelColor": "rgba(0, 0, 0, 0.87)",
                "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
                "requiredColor": "#0081ff",
              },
              "chip": Object {
                "backgroundColor": "rgb(224, 224, 224)",
                "deleteIconColor": "rgba(0, 0, 0, 0.26)",
                "fontSize": 14,
                "fontWeight": 400,
                "shadow": "0 1px 6px rgba(0, 0, 0, 0.12),
        0 1px 4px rgba(0, 0, 0, 0.12)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "datePicker": Object {
                "calendarTextColor": "rgba(0, 0, 0, 0.87)",
                "calendarYearBackgroundColor": "#ffffff",
                "color": "#0081ff",
                "headerColor": "#0081ff",
                "selectColor": "#0081ff",
                "selectTextColor": "#ffffff",
                "textColor": "#ffffff",
              },
              "dialog": Object {
                "bodyColor": "rgba(0, 0, 0, 0.6)",
                "bodyFontSize": 16,
                "titleFontSize": 22,
              },
              "drawer": Object {
                "color": "#ffffff",
                "width": 256,
              },
              "dropDownMenu": Object {
                "accentColor": "#e0e0e0",
              },
              "enhancedButton": Object {
                "tapHighlightColor": "rgba(0, 0, 0, 0)",
              },
              "flatButton": Object {
                "buttonFilterColor": "#999999",
                "color": "rgba(0, 0, 0, 0)",
                "disabledTextColor": "rgba(0, 0, 0, 0.3)",
                "fontSize": 14,
                "fontWeight": 500,
                "primaryTextColor": "#0081ff",
                "secondaryTextColor": "#ff4081",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "floatingActionButton": Object {
                "buttonSize": 56,
                "color": "#0081ff",
                "disabledColor": "rgb(224, 224, 224)",
                "disabledTextColor": "rgba(0, 0, 0, 0.3)",
                "iconColor": "#ffffff",
                "miniSize": 40,
                "secondaryColor": "#ff4081",
                "secondaryIconColor": "#ffffff",
              },
              "fontFamily": "Roboto, sans-serif",
              "gridTile": Object {
                "textColor": "#ffffff",
              },
              "icon": Object {
                "backgroundColor": "#0081ff",
                "color": "#ffffff",
              },
              "inkBar": Object {
                "backgroundColor": "#ff4081",
              },
              "isRtl": false,
              "listItem": Object {
                "leftIconColor": "#757575",
                "nestedLevelDepth": 18,
                "rightIconColor": "#757575",
                "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
              },
              "menu": Object {
                "backgroundColor": "#ffffff",
                "containerBackgroundColor": "#ffffff",
              },
              "menuItem": Object {
                "dataHeight": 32,
                "height": 48,
                "hoverColor": "rgba(0, 0, 0, 0.1)",
                "padding": 24,
                "rightIconDesktopFill": "#757575",
                "selectedTextColor": "#ff4081",
              },
              "menuSubheader": Object {
                "borderColor": "#e0e0e0",
                "padding": 24,
                "textColor": "#0081ff",
              },
              "overlay": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.54)",
              },
              "palette": Object {
                "accent1Color": "#ff4081",
                "accent2Color": "#f5f5f5",
                "accent3Color": "#9e9e9e",
                "alternateTextColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "canvasColor": "#ffffff",
                "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                "disabledColor": "rgba(0, 0, 0, 0.3)",
                "pickerHeaderColor": "#0081ff",
                "primary1Color": "#0081ff",
                "primary2Color": "#0081ff",
                "primary3Color": "#bdbdbd",
                "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
                "shadowColor": "rgba(0, 0, 0, 1)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "paper": Object {
                "backgroundColor": "#ffffff",
                "color": "rgba(0, 0, 0, 0.87)",
                "zDepthShadows": Array [
                  "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
                  "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "0 10px 30px rgba(0, 0, 0, 0.19),
         0 6px 10px rgba(0, 0, 0, 0.23)",
                  "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
                  "0 19px 60px rgba(0, 0, 0, 0.3),
         0 15px 20px rgba(0, 0, 0, 0.22)",
                ],
              },
              "prepareStyles": [Function],
              "radioButton": Object {
                "backgroundColor": "#ffffff",
                "borderColor": "rgba(0, 0, 0, 0.87)",
                "checkedColor": "#0081ff",
                "disabledColor": "rgba(0, 0, 0, 0.3)",
                "labelColor": "rgba(0, 0, 0, 0.87)",
                "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
                "requiredColor": "#0081ff",
                "size": 24,
              },
              "raisedButton": Object {
                "color": "#ffffff",
                "disabledColor": "rgb(229, 229, 229)",
                "disabledTextColor": "rgba(0, 0, 0, 0.3)",
                "fontSize": 14,
                "fontWeight": 500,
                "primaryColor": "#0081ff",
                "primaryTextColor": "#ffffff",
                "secondaryColor": "#ff4081",
                "secondaryTextColor": "#ffffff",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "rawTheme": Object {
                "fontFamily": "Roboto, sans-serif",
                "palette": Object {
                  "accent1Color": "#ff4081",
                  "accent2Color": "#f5f5f5",
                  "accent3Color": "#9e9e9e",
                  "alternateTextColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "canvasColor": "#ffffff",
                  "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                  "disabledColor": "rgba(0, 0, 0, 0.3)",
                  "pickerHeaderColor": "#0081ff",
                  "primary1Color": "#0081ff",
                  "primary2Color": "#0081ff",
                  "primary3Color": "#bdbdbd",
                  "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "textColor": "rgba(0, 0, 0, 0.87)",
                },
                "spacing": Object {
                  "desktopDrawerMenuItemHeight": 48,
                  "desktopDropDownMenuFontSize": 15,
                  "desktopDropDownMenuItemHeight": 32,
                  "desktopGutter": 24,
                  "desktopGutterLess": 16,
                  "desktopGutterMini": 8,
                  "desktopGutterMore": 32,
                  "desktopKeylineIncrement": 64,
                  "desktopSubheaderHeight": 48,
                  "desktopToolbarHeight": 56,
                  "iconSize": 24,
                },
              },
              "refreshIndicator": Object {
                "loadingStrokeColor": "#0081ff",
                "strokeColor": "#e0e0e0",
              },
              "ripple": Object {
                "color": "rgba(0, 0, 0, 0.87)",
              },
              "slider": Object {
                "handleColorZero": "#bdbdbd",
                "handleFillColor": "#ffffff",
                "handleSize": 12,
                "handleSizeActive": 18,
                "handleSizeDisabled": 8,
                "rippleColor": "#0081ff",
                "selectionColor": "#0081ff",
                "trackColor": "#bdbdbd",
                "trackColorSelected": "#9e9e9e",
                "trackSize": 2,
              },
              "snackbar": Object {
                "actionColor": "#ff4081",
                "backgroundColor": "rgba(0, 0, 0, 0.87)",
                "textColor": "#ffffff",
              },
              "spacing": Object {
                "desktopDrawerMenuItemHeight": 48,
                "desktopDropDownMenuFontSize": 15,
                "desktopDropDownMenuItemHeight": 32,
                "desktopGutter": 24,
                "desktopGutterLess": 16,
                "desktopGutterMini": 8,
                "desktopGutterMore": 32,
                "desktopKeylineIncrement": 64,
                "desktopSubheaderHeight": 48,
                "desktopToolbarHeight": 56,
                "iconSize": 24,
              },
              "stepper": Object {
                "backgroundColor": "transparent",
                "connectorLineColor": "#bdbdbd",
                "disabledTextColor": "rgba(0, 0, 0, 0.26)",
                "hoverBackgroundColor": "rgba(0, 0, 0, 0.06)",
                "hoveredIconColor": "#616161",
                "iconColor": "#0081ff",
                "inactiveIconColor": "#9e9e9e",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "subheader": Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontWeight": 500,
              },
              "svgIcon": Object {
                "color": "rgba(0, 0, 0, 0.87)",
              },
              "table": Object {
                "backgroundColor": "#ffffff",
              },
              "tableFooter": Object {
                "borderColor": "#e0e0e0",
                "textColor": "#9e9e9e",
              },
              "tableHeader": Object {
                "borderColor": "#e0e0e0",
              },
              "tableHeaderColumn": Object {
                "height": 56,
                "spacing": 24,
                "textColor": "#9e9e9e",
              },
              "tableRow": Object {
                "borderColor": "#e0e0e0",
                "height": 48,
                "hoverColor": "#f5f5f5",
                "selectedColor": "#e0e0e0",
                "stripeColor": "rgba(127, 192, 255, 0.4)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "tableRowColumn": Object {
                "height": 48,
                "spacing": 24,
              },
              "tabs": Object {
                "backgroundColor": "#0081ff",
                "selectedTextColor": "#ffffff",
                "textColor": "rgba(255, 255, 255, 0.7)",
              },
              "textField": Object {
                "backgroundColor": "transparent",
                "borderColor": "#e0e0e0",
                "disabledTextColor": "rgba(0, 0, 0, 0.3)",
                "errorColor": "#f44336",
                "floatingLabelColor": "rgba(0, 0, 0, 0.3)",
                "focusColor": "#0081ff",
                "hintColor": "rgba(0, 0, 0, 0.3)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "timePicker": Object {
                "accentColor": "#0081ff",
                "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                "clockColor": "rgba(0, 0, 0, 0.87)",
                "color": "#ffffff",
                "headerColor": "#0081ff",
                "selectColor": "#0081ff",
                "selectTextColor": "#ffffff",
                "textColor": "#ffffff",
              },
              "toggle": Object {
                "labelColor": "rgba(0, 0, 0, 0.87)",
                "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
                "thumbDisabledColor": "#e0e0e0",
                "thumbOffColor": "#f5f5f5",
                "thumbOnColor": "#0081ff",
                "thumbRequiredColor": "#0081ff",
                "trackDisabledColor": "#bdbdbd",
                "trackOffColor": "#bdbdbd",
                "trackOnColor": "rgba(0, 129, 255, 0.5)",
                "trackRequiredColor": "rgba(0, 129, 255, 0.5)",
              },
              "toolbar": Object {
                "backgroundColor": "rgb(232, 232, 232)",
                "color": "rgba(0, 0, 0, 0.54)",
                "height": 56,
                "hoverColor": "rgba(0, 0, 0, 0.87)",
                "iconColor": "rgba(0, 0, 0, 0.4)",
                "menuHoverColor": "rgba(0, 0, 0, 0.1)",
                "separatorColor": "rgba(0, 0, 0, 0.175)",
                "titleFontSize": 20,
              },
              "tooltip": Object {
                "color": "#ffffff",
                "opacity": 0.9,
                "rippleBackgroundColor": "#616161",
              },
              "zIndex": Object {
                "appBar": 1100,
                "dialog": 1500,
                "dialogOverlay": 1400,
                "drawer": 1300,
                "drawerOverlay": 1200,
                "layer": 2000,
                "menu": 1000,
                "popover": 2100,
                "snackbar": 2900,
                "tooltip": 3000,
              },
            }
          }
        >
          <Apollo(FormContainer) />
        </MuiThemeProvider>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Apollo(FormContainer) />,
          "muiTheme": Object {
            "appBar": Object {
              "color": "#0081ff",
              "height": 64,
              "padding": 24,
              "textColor": "#ffffff",
              "titleFontWeight": 400,
            },
            "avatar": Object {
              "backgroundColor": "rgb(188, 188, 188)",
              "color": "#ffffff",
            },
            "badge": Object {
              "color": "#ffffff",
              "fontWeight": 500,
              "primaryColor": "#0081ff",
              "primaryTextColor": "#ffffff",
              "secondaryColor": "#ff4081",
              "secondaryTextColor": "#ffffff",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "baseTheme": Object {
              "fontFamily": "Roboto, sans-serif",
              "palette": Object {
                "accent1Color": "#ff4081",
                "accent2Color": "#f5f5f5",
                "accent3Color": "#9e9e9e",
                "alternateTextColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "canvasColor": "#ffffff",
                "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                "disabledColor": "rgba(0, 0, 0, 0.3)",
                "pickerHeaderColor": "#0081ff",
                "primary1Color": "#0081ff",
                "primary2Color": "#0081ff",
                "primary3Color": "#bdbdbd",
                "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
                "shadowColor": "rgba(0, 0, 0, 1)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "spacing": Object {
                "desktopDrawerMenuItemHeight": 48,
                "desktopDropDownMenuFontSize": 15,
                "desktopDropDownMenuItemHeight": 32,
                "desktopGutter": 24,
                "desktopGutterLess": 16,
                "desktopGutterMini": 8,
                "desktopGutterMore": 32,
                "desktopKeylineIncrement": 64,
                "desktopSubheaderHeight": 48,
                "desktopToolbarHeight": 56,
                "iconSize": 24,
              },
            },
            "borderRadius": 2,
            "bottomNavigation": Object {
              "backgroundColor": "#ffffff",
              "height": 56,
              "selectedColor": "#0081ff",
              "selectedFontSize": 14,
              "unselectedColor": "rgba(0, 0, 0, 0.54)",
              "unselectedFontSize": 12,
            },
            "button": Object {
              "height": 36,
              "iconButtonSize": 48,
              "minWidth": 88,
            },
            "card": Object {
              "fontWeight": 500,
              "subtitleColor": "rgba(0, 0, 0, 0.54)",
              "titleColor": "rgba(0, 0, 0, 0.87)",
            },
            "cardMedia": Object {
              "color": "rgba(255, 255, 255, 0.87)",
              "overlayContentBackground": "rgba(0, 0, 0, 0.54)",
              "subtitleColor": "rgba(255, 255, 255, 0.54)",
              "titleColor": "rgba(255, 255, 255, 0.87)",
            },
            "cardText": Object {
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "checkbox": Object {
              "boxColor": "rgba(0, 0, 0, 0.87)",
              "checkedColor": "#0081ff",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "labelColor": "rgba(0, 0, 0, 0.87)",
              "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
              "requiredColor": "#0081ff",
            },
            "chip": Object {
              "backgroundColor": "rgb(224, 224, 224)",
              "deleteIconColor": "rgba(0, 0, 0, 0.26)",
              "fontSize": 14,
              "fontWeight": 400,
              "shadow": "0 1px 6px rgba(0, 0, 0, 0.12),
        0 1px 4px rgba(0, 0, 0, 0.12)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "datePicker": Object {
              "calendarTextColor": "rgba(0, 0, 0, 0.87)",
              "calendarYearBackgroundColor": "#ffffff",
              "color": "#0081ff",
              "headerColor": "#0081ff",
              "selectColor": "#0081ff",
              "selectTextColor": "#ffffff",
              "textColor": "#ffffff",
            },
            "dialog": Object {
              "bodyColor": "rgba(0, 0, 0, 0.6)",
              "bodyFontSize": 16,
              "titleFontSize": 22,
            },
            "drawer": Object {
              "color": "#ffffff",
              "width": 256,
            },
            "dropDownMenu": Object {
              "accentColor": "#e0e0e0",
            },
            "enhancedButton": Object {
              "tapHighlightColor": "rgba(0, 0, 0, 0)",
            },
            "flatButton": Object {
              "buttonFilterColor": "#999999",
              "color": "rgba(0, 0, 0, 0)",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "fontSize": 14,
              "fontWeight": 500,
              "primaryTextColor": "#0081ff",
              "secondaryTextColor": "#ff4081",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "floatingActionButton": Object {
              "buttonSize": 56,
              "color": "#0081ff",
              "disabledColor": "rgb(224, 224, 224)",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "iconColor": "#ffffff",
              "miniSize": 40,
              "secondaryColor": "#ff4081",
              "secondaryIconColor": "#ffffff",
            },
            "fontFamily": "Roboto, sans-serif",
            "gridTile": Object {
              "textColor": "#ffffff",
            },
            "icon": Object {
              "backgroundColor": "#0081ff",
              "color": "#ffffff",
            },
            "inkBar": Object {
              "backgroundColor": "#ff4081",
            },
            "isRtl": false,
            "listItem": Object {
              "leftIconColor": "#757575",
              "nestedLevelDepth": 18,
              "rightIconColor": "#757575",
              "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
            },
            "menu": Object {
              "backgroundColor": "#ffffff",
              "containerBackgroundColor": "#ffffff",
            },
            "menuItem": Object {
              "dataHeight": 32,
              "height": 48,
              "hoverColor": "rgba(0, 0, 0, 0.1)",
              "padding": 24,
              "rightIconDesktopFill": "#757575",
              "selectedTextColor": "#ff4081",
            },
            "menuSubheader": Object {
              "borderColor": "#e0e0e0",
              "padding": 24,
              "textColor": "#0081ff",
            },
            "overlay": Object {
              "backgroundColor": "rgba(0, 0, 0, 0.54)",
            },
            "palette": Object {
              "accent1Color": "#ff4081",
              "accent2Color": "#f5f5f5",
              "accent3Color": "#9e9e9e",
              "alternateTextColor": "#ffffff",
              "borderColor": "#e0e0e0",
              "canvasColor": "#ffffff",
              "clockCircleColor": "rgba(0, 0, 0, 0.07)",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "pickerHeaderColor": "#0081ff",
              "primary1Color": "#0081ff",
              "primary2Color": "#0081ff",
              "primary3Color": "#bdbdbd",
              "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
              "shadowColor": "rgba(0, 0, 0, 1)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "paper": Object {
              "backgroundColor": "#ffffff",
              "color": "rgba(0, 0, 0, 0.87)",
              "zDepthShadows": Array [
                "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
                "0 3px 10px rgba(0, 0, 0, 0.16),
         0 3px 10px rgba(0, 0, 0, 0.23)",
                "0 10px 30px rgba(0, 0, 0, 0.19),
         0 6px 10px rgba(0, 0, 0, 0.23)",
                "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
                "0 19px 60px rgba(0, 0, 0, 0.3),
         0 15px 20px rgba(0, 0, 0, 0.22)",
              ],
            },
            "prepareStyles": [Function],
            "radioButton": Object {
              "backgroundColor": "#ffffff",
              "borderColor": "rgba(0, 0, 0, 0.87)",
              "checkedColor": "#0081ff",
              "disabledColor": "rgba(0, 0, 0, 0.3)",
              "labelColor": "rgba(0, 0, 0, 0.87)",
              "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
              "requiredColor": "#0081ff",
              "size": 24,
            },
            "raisedButton": Object {
              "color": "#ffffff",
              "disabledColor": "rgb(229, 229, 229)",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "fontSize": 14,
              "fontWeight": 500,
              "primaryColor": "#0081ff",
              "primaryTextColor": "#ffffff",
              "secondaryColor": "#ff4081",
              "secondaryTextColor": "#ffffff",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "rawTheme": Object {
              "fontFamily": "Roboto, sans-serif",
              "palette": Object {
                "accent1Color": "#ff4081",
                "accent2Color": "#f5f5f5",
                "accent3Color": "#9e9e9e",
                "alternateTextColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "canvasColor": "#ffffff",
                "clockCircleColor": "rgba(0, 0, 0, 0.07)",
                "disabledColor": "rgba(0, 0, 0, 0.3)",
                "pickerHeaderColor": "#0081ff",
                "primary1Color": "#0081ff",
                "primary2Color": "#0081ff",
                "primary3Color": "#bdbdbd",
                "secondaryTextColor": "rgba(0, 0, 0, 0.54)",
                "shadowColor": "rgba(0, 0, 0, 1)",
                "textColor": "rgba(0, 0, 0, 0.87)",
              },
              "spacing": Object {
                "desktopDrawerMenuItemHeight": 48,
                "desktopDropDownMenuFontSize": 15,
                "desktopDropDownMenuItemHeight": 32,
                "desktopGutter": 24,
                "desktopGutterLess": 16,
                "desktopGutterMini": 8,
                "desktopGutterMore": 32,
                "desktopKeylineIncrement": 64,
                "desktopSubheaderHeight": 48,
                "desktopToolbarHeight": 56,
                "iconSize": 24,
              },
            },
            "refreshIndicator": Object {
              "loadingStrokeColor": "#0081ff",
              "strokeColor": "#e0e0e0",
            },
            "ripple": Object {
              "color": "rgba(0, 0, 0, 0.87)",
            },
            "slider": Object {
              "handleColorZero": "#bdbdbd",
              "handleFillColor": "#ffffff",
              "handleSize": 12,
              "handleSizeActive": 18,
              "handleSizeDisabled": 8,
              "rippleColor": "#0081ff",
              "selectionColor": "#0081ff",
              "trackColor": "#bdbdbd",
              "trackColorSelected": "#9e9e9e",
              "trackSize": 2,
            },
            "snackbar": Object {
              "actionColor": "#ff4081",
              "backgroundColor": "rgba(0, 0, 0, 0.87)",
              "textColor": "#ffffff",
            },
            "spacing": Object {
              "desktopDrawerMenuItemHeight": 48,
              "desktopDropDownMenuFontSize": 15,
              "desktopDropDownMenuItemHeight": 32,
              "desktopGutter": 24,
              "desktopGutterLess": 16,
              "desktopGutterMini": 8,
              "desktopGutterMore": 32,
              "desktopKeylineIncrement": 64,
              "desktopSubheaderHeight": 48,
              "desktopToolbarHeight": 56,
              "iconSize": 24,
            },
            "stepper": Object {
              "backgroundColor": "transparent",
              "connectorLineColor": "#bdbdbd",
              "disabledTextColor": "rgba(0, 0, 0, 0.26)",
              "hoverBackgroundColor": "rgba(0, 0, 0, 0.06)",
              "hoveredIconColor": "#616161",
              "iconColor": "#0081ff",
              "inactiveIconColor": "#9e9e9e",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "subheader": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontWeight": 500,
            },
            "svgIcon": Object {
              "color": "rgba(0, 0, 0, 0.87)",
            },
            "table": Object {
              "backgroundColor": "#ffffff",
            },
            "tableFooter": Object {
              "borderColor": "#e0e0e0",
              "textColor": "#9e9e9e",
            },
            "tableHeader": Object {
              "borderColor": "#e0e0e0",
            },
            "tableHeaderColumn": Object {
              "height": 56,
              "spacing": 24,
              "textColor": "#9e9e9e",
            },
            "tableRow": Object {
              "borderColor": "#e0e0e0",
              "height": 48,
              "hoverColor": "#f5f5f5",
              "selectedColor": "#e0e0e0",
              "stripeColor": "rgba(127, 192, 255, 0.4)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "tableRowColumn": Object {
              "height": 48,
              "spacing": 24,
            },
            "tabs": Object {
              "backgroundColor": "#0081ff",
              "selectedTextColor": "#ffffff",
              "textColor": "rgba(255, 255, 255, 0.7)",
            },
            "textField": Object {
              "backgroundColor": "transparent",
              "borderColor": "#e0e0e0",
              "disabledTextColor": "rgba(0, 0, 0, 0.3)",
              "errorColor": "#f44336",
              "floatingLabelColor": "rgba(0, 0, 0, 0.3)",
              "focusColor": "#0081ff",
              "hintColor": "rgba(0, 0, 0, 0.3)",
              "textColor": "rgba(0, 0, 0, 0.87)",
            },
            "timePicker": Object {
              "accentColor": "#0081ff",
              "clockCircleColor": "rgba(0, 0, 0, 0.07)",
              "clockColor": "rgba(0, 0, 0, 0.87)",
              "color": "#ffffff",
              "headerColor": "#0081ff",
              "selectColor": "#0081ff",
              "selectTextColor": "#ffffff",
              "textColor": "#ffffff",
            },
            "toggle": Object {
              "labelColor": "rgba(0, 0, 0, 0.87)",
              "labelDisabledColor": "rgba(0, 0, 0, 0.3)",
              "thumbDisabledColor": "#e0e0e0",
              "thumbOffColor": "#f5f5f5",
              "thumbOnColor": "#0081ff",
              "thumbRequiredColor": "#0081ff",
              "trackDisabledColor": "#bdbdbd",
              "trackOffColor": "#bdbdbd",
              "trackOnColor": "rgba(0, 129, 255, 0.5)",
              "trackRequiredColor": "rgba(0, 129, 255, 0.5)",
            },
            "toolbar": Object {
              "backgroundColor": "rgb(232, 232, 232)",
              "color": "rgba(0, 0, 0, 0.54)",
              "height": 56,
              "hoverColor": "rgba(0, 0, 0, 0.87)",
              "iconColor": "rgba(0, 0, 0, 0.4)",
              "menuHoverColor": "rgba(0, 0, 0, 0.1)",
              "separatorColor": "rgba(0, 0, 0, 0.175)",
              "titleFontSize": 20,
            },
            "tooltip": Object {
              "color": "#ffffff",
              "opacity": 0.9,
              "rippleBackgroundColor": "#616161",
            },
            "zIndex": Object {
              "appBar": 1100,
              "dialog": 1500,
              "dialogOverlay": 1400,
              "drawer": 1300,
              "drawerOverlay": 1200,
              "layer": 2000,
              "menu": 1000,
              "popover": 2100,
              "snackbar": 2900,
              "tooltip": 3000,
            },
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bZQynM",
          "isStatic": true,
          "rules": Array [
            "
  text-align: center;
  background-color: #e6ecf5;
  height: 100vh;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bZQynM",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`BioTextInput component should match component props with initialState(store) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(BioTextInput)
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "setYourBio": [Function],
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
      "your_bio": "web developer trying to improve personal skills",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "setYourBio": [Function],
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "your_bio": "web developer trying to improve personal skills",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`JsLibraryRadioButton component should render connected <PrimarySkillSelectField /> component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(JsLibraryRadioButton)
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "setJavascriptLibraryOfChoice": [Function],
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "setJavascriptLibraryOfChoice": [Function],
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`LeftBox component should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeftBox
    organizationName="Pipefy Recruitment Test"
    title="Recruitment Survey"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          Pipefy Recruitment Test
        </ForwardRef>,
        <ForwardRef>
          Recruitment Survey
        </ForwardRef>,
      ],
      "id": "left-box",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Pipefy Recruitment Test",
        },
        "ref": null,
        "rendered": "Pipefy Recruitment Test",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  color: #0081ff;
  font-size: 22px;
  text-align: left;
  font-weight: bold;
  margin: 10px 10px 0 10px;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Recruitment Survey",
        },
        "ref": null,
        "rendered": "Recruitment Survey",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htpNat",
            "isStatic": true,
            "rules": Array [
              "
  color: #293e52;
  font-size: 22px;
  text-align: left;
  font-weight: bold;
  margin: 10px 10px 0 10px;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-htpNat",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": true,
        "rules": Array [
          "
  width: 200px;
  height: 200px;
  background-color: white;
  border-radius: 8px;
  margin: 0 5px auto 20%;
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            Pipefy Recruitment Test
          </ForwardRef>,
          <ForwardRef>
            Recruitment Survey
          </ForwardRef>,
        ],
        "id": "left-box",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Pipefy Recruitment Test",
          },
          "ref": null,
          "rendered": "Pipefy Recruitment Test",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  color: #0081ff;
  font-size: 22px;
  text-align: left;
  font-weight: bold;
  margin: 10px 10px 0 10px;
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Recruitment Survey",
          },
          "ref": null,
          "rendered": "Recruitment Survey",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": true,
              "rules": Array [
                "
  color: #293e52;
  font-size: 22px;
  text-align: left;
  font-weight: bold;
  margin: 10px 10px 0 10px;
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": true,
          "rules": Array [
            "
  width: 200px;
  height: 200px;
  background-color: white;
  border-radius: 8px;
  margin: 0 5px auto 20%;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`NameTextInput component should match component props with initialState(store) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(NameTextInput)
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "setYourName": [Function],
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
      "your_name": "Gabriel Reis",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "setYourName": [Function],
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "your_name": "Gabriel Reis",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`PrimarySkillSelectField component should match component props with initialState(store) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(PrimarySkillSelectField)
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "getPrimarySkill": "Functional Programming",
      "setPrimarySkill": [Function],
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "getPrimarySkill": "Functional Programming",
        "setPrimarySkill": [Function],
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`StartDate component should render connected <StartDate /> component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(StartDate)
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "setStartDate": [Function],
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "setStartDate": [Function],
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
